V9+ VF correction bug grâce au overflow:hidden

--- a/public/cssNoPrefixed/style.css
+++ b/public/cssNoPrefixed/style.css
@@ -8,6 +8,7 @@
 
 body {
   width: 100%;
+  height: 100vh;
   margin: auto;
   background-color: #FFFFFF;
   box-sizing: border-box;
@@ -81,43 +82,43 @@ body {
   width: 8px;
   height: 8px;
   top: 62%;
-  left: 46%;
+  left: 40%;
 }
 .bubble--xs {
   width: 10px;
   height: 10px;
   top: 64%;
-  left: 54%;
+  left: 59%;
 }
 .bubble--s {
   width: 12px;
   height: 12px;
   top: 61%;
-  left: 42%;
+  left: 58%;
 }
 .bubble--m {
   width: 15px;
   height: 15px;
   top: 60%;
-  left: 59%;
+  left: 41%;
 }
 .bubble--l {
   width: 18px;
   height: 18px;
   top: 65%;
-  left: 42%;
+  left: 45%;
 }
 .bubble--xl {
   width: 22px;
   height: 22px;
   top: 65%;
-  left: 55%;
+  left: 48%;
 }
 .bubble--xxl {
   width: 25px;
   height: 25px;
   top: 62.5%;
-  left: 58%;
+  left: 52%;
 }
 
 .fish {
@@ -135,60 +136,60 @@ body {
   background: #d5a662;
   width: 4px;
   height: 2px;
-  top: 48%;
+  top: 24%;
   left: -4px;
-  animation: fish-anim 45926ms 15721ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 43111ms 3922ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--xs {
   background: #dab177;
   width: 5px;
   height: 2px;
-  top: 49%;
+  top: 91%;
   left: -5px;
-  animation: fish-anim 27162ms 9325ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 30724ms 22950ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--s {
   background: #e0bd8b;
   width: 6px;
   height: 3px;
-  top: 35%;
+  top: 34%;
   left: -6px;
-  animation: fish-anim 32368ms 4148ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 39321ms 2359ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--m {
   background: #e3c397;
   width: 10px;
   height: 5px;
-  top: 59%;
+  top: 91%;
   left: -10px;
-  animation: fish-anim 27703ms 35499ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 25204ms 25430ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--l {
   background: #e5c89f;
   width: 12px;
   height: 6px;
-  top: 84%;
+  top: 51%;
   left: -12px;
-  animation: fish-anim 20960ms 15301ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 13217ms 12729ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--xl {
   background: #e7cda7;
   width: 14px;
   height: 8px;
-  top: 12%;
+  top: 66%;
   left: -14px;
-  animation: fish-anim 14267ms 13614ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 19651ms 16187ms normal cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 .fish--xxl {
   background: #ebd4b3;
   width: 16px;
   height: 8px;
-  top: 74%;
+  top: 26%;
   left: -16px;
-  animation: fish-anim 15756ms 1543ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
+  animation: fish-anim 16582ms 20879ms reverse cubic-bezier(0.84, 0.74, 0.44, 0.65) infinite;
 }
 @keyframes fish-anim {
-  84%, 100% {
+  78%, 100% {
     left: 110%;
   }
 }
@@ -339,11 +340,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 47%;
+    left: 41%;
   }
   75% {
     opacity: 1;
-    left: 45%;
+    left: 39%;
   }
   100% {
     opacity: 0;
@@ -362,11 +363,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 55.4%;
+    left: 60.4%;
   }
   75% {
     opacity: 1;
-    left: 52.6%;
+    left: 57.6%;
   }
   100% {
     opacity: 0;
@@ -385,11 +386,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 42.5%;
+    left: 58.5%;
   }
   75% {
     opacity: 1;
-    left: 41.5%;
+    left: 57.5%;
   }
   100% {
     opacity: 0;
@@ -408,11 +409,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 60.2%;
+    left: 42.2%;
   }
   75% {
     opacity: 1;
-    left: 57.8%;
+    left: 39.8%;
   }
   100% {
     opacity: 0;
@@ -431,11 +432,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 43.1%;
+    left: 46.1%;
   }
   75% {
     opacity: 1;
-    left: 40.9%;
+    left: 43.9%;
   }
   100% {
     opacity: 0;
@@ -454,11 +455,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 56%;
+    left: 49%;
   }
   75% {
     opacity: 1;
-    left: 54%;
+    left: 47%;
   }
   100% {
     opacity: 0;
@@ -477,11 +478,11 @@ body {
   }
   50% {
     opacity: 1;
-    left: 58.8%;
+    left: 52.8%;
   }
   75% {
     opacity: 1;
-    left: 57.2%;
+    left: 51.2%;
   }
   100% {
     opacity: 0;
@@ -677,8 +678,9 @@ body {
 .aquarium {
   position: relative;
   z-index: 1;
+  overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(0deg, #020024 2%, #090979 39%, #00d4ff 100%);
 }
 .aquarium__abyss {
