--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -8,10 +8,11 @@
 .aquarium {
 	position:relative;
 	z-index:1;
+	overflow:hidden;
 
 	//LAYOUT
 	width:100%;
-	height:100vh;
+	height:100%;
 
 	//PAINT
 	background: linear-gradient(0deg, v.$color3 2%, v.$color1 39%, v.$color2 100%);
